--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.22.0",
+    "bootstrap": "^5.0.0-beta3",
     "core-js": "^3.6.5",
+    "materialize-css": "^1.0.0-rc.2",
+    "mdb-ui-kit": "^3.9.0",
+    "mdb-vue-ui-kit": "^1.4.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
